2003-08-21  Sam Steingold  <sds@gnu.org>

	* utils/modprep.c: rewrote in lisp
	* modules/regexp/regexi.c (REGEXP-COMPILE): pass a subr instead
	of a symbol to FINALIZE (supported by modprep.lisp)

2003-08-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (create-fun-obj, c-LOAD-TIME-VALUE): use
	*fasoutput-stream* instead of *compiling-from-file* to check
	whether the constant will be read before being evaluated
	- necessary for the recent COMPILE-FORM-IN-TOPLEVEL-ENVIRONMENT change
	Reported by Douglas Philips <dgou@mac.com>
	<http://article.gmane.org/gmane.lisp.clisp.general/7393>

2003-08-18  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (set-logical-pathname-translations): missing slots
	default to :WILD, as per ANSI CL
	* pathname.d (MAKE-LOGICAL-PATHNAME): upcase host
	(host_match, nametype_match_aux, subdir_match, version_match)
	(version_diff, translate_subdir, translate_version):
	merge identical LOGICAL and PHYSICAL code
	(translate_nametype_aux): do not replace NIL with ""

2003-08-17  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [darwin]: removed `--traditional-cpp'
	Reported by Douglas Philips <dgou@mac.com>
	<http://article.gmane.org/gmane.lisp.clisp.devel/10282>

2003-08-15  Sam Steingold  <sds@gnu.org>

	MATCH structure is now printable
	* modules/regexp/regexi.c (REGEXP-EXEC): use MAKE-MATCH-BOA
	* modules/regexp/regexp.lisp (match): define a keyword
	constructor too

2003-08-15  Sam Steingold  <sds@gnu.org>

	* modules/netica/wrap.lisp (make-node): specify placement
	(node-info): show parents and children
	(with-open-dne-file): new macro
	(read-net): new function
	* modules/netica/netica.lisp (GetNodeExpectedValue_bn)
	(GetNodeVisPosition_bn): fixed declarations
	* modules/netica/demo.lisp: specify placement

2003-08-15  Sam Steingold  <sds@gnu.org>

	* io.d (pr_orecord): print logical pathnames as namestrings (when
	printing un-readably and ANSI "host:path" is enabled)

2003-08-14  Sam Steingold  <sds@gnu.org>
